--- a/templates-testing.html
+++ b/templates-testing.html
@@ -7,116 +7,33 @@
     <title>Document</title>
 </head>
 
-<body
-style="margin: 0; padding: 0; font-family: 'Google-Sans', 'Helvetica Neue', sans-serif; background-color: #f5f5f5; color: #333333;">
-<table cellpadding="0" cellspacing="0" border="0" width="100%"
-    style="max-width: 600px; margin: 20px auto; border-radius: 20px; overflow: hidden; background-color: #f4eefd;">
-    <tr>
-        <td
-            style="background-color: #000717; padding: 15px; text-align: center; border-top-left-radius: 20px; border-top-right-radius: 20px;">
-            <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                <tr>
-                    <td style="text-align: center;">
-                        <img src="https://muhammadumer.sirv.com/logo.webp" alt="Global Salah Logo"
-                            style="display: inline-block; height: 50px; width: auto; vertical-align: middle; margin-right: 10px;">
-                        <span
-                            style="display: inline-block; vertical-align: middle; font-size: 28px; font-weight: 600; color: whitesmoke;">Global
-                            Salah</span>
-                    </td>
-                </tr>
-            </table>
-        </td>
-    </tr>
+<body style="margin: 0; padding: 0; background-color: #f4eefd; font-family: 'Google-sans';">
+    <div style="width: 100%; max-width: 600px; border-radius: 20px; margin: 20px auto; background-color: #ffffff; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);">
+        <div style="text-align: center; padding: 20px; background-color: #000717; border-top-left-radius: 20px; border-top-right-radius: 20px;">
+            <div style="display: flex; align-items: center; justify-content: center;">
+                <img src="https://muhammadumer.sirv.com/logo.webp" alt="Global Salah" style="height: 50px; width: auto; margin-right: 10px;">
+                <p style="margin: 0; font-size: 24px; font-weight: 600; color: whitesmoke;">Global Salah</p>
+            </div>
+        </div>
 
-    <tr>
-        <td style="padding: 30px 25px; background-color: #f4eefd;">
-            <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                <tr>
-                    <td style="text-align: center; padding-bottom: 20px;">
-                        <img src="/public/icons8-notification.gif" alt="Notification Icon"
-                            style="width: 60px; height: 60px;">
-                    </td>
-                </tr>
+        <div style="padding: 20px; text-align: center;">
+            <p style="font-size: 22px; font-weight: 600; color: #333;">A new 
+                <span style="color: #6c5ce7;">${isAnswer ? "Answer" : "Question"}</span> has been added to the waitlist
+            </p>
+            <p style="font-size: 16px; color: gray; margin-bottom: 20px;">Click the button below to check it out.</p>
+            
+            <a href="https://globalsalah.com/en/admin-panel" style="display: inline-block; padding: 12px 24px; font-size: 16px; font-weight: bold; color: white; background-color: #6c5ce7; text-decoration: none; border-radius: 8px; transition: 0.3s;">
+                Check Now
+            </a>
+        </div>
 
-                <tr>
-                    <td style="padding-bottom: 25px;">
-                        <div
-                            style="background-color: #ffffff; border-radius: 12px; padding: 25px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);">
-                            <h2
-                                style="margin: 0 0 15px; font-size: 22px; font-weight: 600; color: #000717; text-align: center;">
-                                Notification Update</h2>
-                            <p
-                                style="margin: 0; font-size: 16px; line-height: 1.6; color: #555555; text-align: center;">
-                                ${
-                                isAnswer ? "Answer" : "Question"
-                                } ${
-                                isAnswer ? answer?.slice(0, 50) : question
-                                } to Global Salah
-                            </p>
-                        </div>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td style="padding-bottom: 25px; text-align: center;">
-                        <a href="https://globalsalah.com/en/forum"
-                            style="display: inline-block; background-color: #000717; color: #ffffff; text-decoration: none; font-weight: 600; padding: 12px 30px; border-radius: 6px; font-size: 16px;">View
-                            Details</a>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td style="padding-bottom: 20px;">
-                        <div
-                            style="background-color: rgba(255, 255, 255, 0.7); border-radius: 8px; padding: 15px; border-left: 4px solid #8a56ac;">
-                            <p style="margin: 0; font-size: 14px; line-height: 1.5; color: #666666;">
-                                Thank you for being an active member of our community. Your contributions help make
-                                Global Salah a valuable resource for everyone.
-                            </p>
-                        </div>
-                    </td>
-                </tr>
-            </table>
-        </td>
-    </tr>
-
-    <tr>
-        <td
-            style="background-color: rgba(0, 7, 23, 0.05); padding: 20px; text-align: center; border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
-            <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                <tr>
-                    <td style="text-align: center; padding-bottom: 15px;">
-                        <a href="https://www.facebook.com/globalsalahofficial/" style="display: inline-block; margin: 0 8px; text-decoration: none;">
-                            <img src="/public/icons8-facebook-48.png" alt="Facebook"
-                                style="height: 30px; width: 30px;">
-                        </a>
-                        <a href="https://x.com/globalsalah" style="display: inline-block; margin: 0 8px; text-decoration: none;">
-                            <img src="https://muhammadumer.sirv.com/twitter.png" alt="Twitter" style="height: 30px; width: 30px;">
-                        </a>
-                        <a href="https://www.instagram.com/globalsalah" style="display: inline-block; margin: 0 8px; text-decoration: none;">
-                            <img src="/public/icons8-instagram-48.png" alt="Instagram"
-                                style="height: 30px; width: 30px;">
-                        </a>
-                        <a href="https://www.pinterest.com/globalsalah/" style="display: inline-block; margin: 0 8px; text-decoration: none;">
-                            <img src="/public/icons8-pinterest-logo-48.png" alt="Instagram"
-                                style="height: 30px; width: 30px;">
-                        </a>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td style="text-align: center;">
-                        <p style="margin: 0 0 10px; font-size: 14px; color: #666666; line-height: 1.5;">
-                            If you have any questions, please contact our support team.
-                        </p>
-                        <p style="margin: 0; font-size: 12px; color: #888888; line-height: 1.5;">
-                            &copy; 2025 Global Salah. All rights reserved.<br>
-                        </p>
-                    </td>
-                </tr>
-            </table>
-        </td>
-    </tr>
-</table>
+        <div style="text-align: center; padding: 15px; font-size: 14px; color: gray;">
+            <p style="margin: 0;">&copy; 2025 Global Salah. All rights reserved.</p>
+        </div>
+    </div>
 </body>
+
+
+
+
 </html>
