Update Navbar z-index and enhance email template image sizes for better visibility

--- a/email-template.html
+++ b/email-template.html
@@ -27,7 +27,7 @@
                        <tr>
                          <td align="center" valign="middle" style="padding: 0 10px;">
                            <div style="width: 90px; height: 90px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto; ;">
-                             <img src="https://muhammadumer.sirv.com/logo.webp" alt="Global Salah Logo" style="width: 60px; height: auto; display: block; margin: 0 auto;">
+                             <img src="https://muhammadumer.sirv.com/logo.webp" alt="Global Salah Logo" style="width: 90px; height: 90px; border-radius: 10px; display: block; margin: 0 auto;">
                            </div>
                          </td>
                        </tr>
@@ -87,7 +87,7 @@
                              <tr>
                                <td valign="middle" width="60">
                                  <div style="width: 50px; height: 50px; background-color: rgba(26,127,100,0.1); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto;">
-                                   <img src="https://muhammadumer.sirv.com/ticket-salah-icon.png" alt="Ticket" style="width: 24px; height: 24px;">
+                                   <img src="https://muhammadumer.sirv.com/ticket-salah-icon.png" alt="Ticket" style="width: 24px; height: 24px; margin: auto;">
                                  </div>
                                </td>
                                <td valign="middle" style="padding-left: 15px;">
@@ -296,7 +296,7 @@
                          <td align="center" valign="top" style="padding: 0 8px;">
                            <a href="https://www.facebook.com/globalsalahofficial/" style="display: inline-block; text-decoration: none;">
                              <div style="width: 36px; height: 36px; background-color: #1a7f64; border-radius: 50%; display: flex; align-items: center; justify-content: center;">
-                               <img src="https://muhammadumer.sirv.com/social-link-salah-fb.png" alt="Facebook" style="width: 18px; height: 18px;">
+                               <img src="https://muhammadumer.sirv.com/social-link-salah-fb.png" alt="Facebook" style="width: 20px; height: 20px; vertical-align: middle; margin: auto;">
                              </div>
                            </a>
                          </td>
@@ -305,7 +305,7 @@
                          <td align="center" valign="top" style="padding: 0 8px;">
                            <a href="https://x.com/globalsalah" style="display: inline-block; text-decoration: none;">
                              <div style="width: 36px; height: 36px; background-color: #1a7f64; border-radius: 50%; display: flex; align-items: center; justify-content: center;">
-                              <img src="https://muhammadumer.sirv.com/social-link-salah-x.png" alt="Twitter" style="width: 18px; height: 18px;">
+                              <img src="https://muhammadumer.sirv.com/social-link-salah-x.png" alt="Twitter" style="width: 20px; height: 20px; vertical-align: middle; margin: auto;">
                              </div>
                            </a>
                          </td>
@@ -314,24 +314,17 @@
                          <td align="center" valign="top" style="padding: 0 8px;">
                            <a href="https://www.instagram.com/globalsalah" style="display: inline-block; text-decoration: none;">
                              <div style="width: 36px; height: 36px; background-color: #1a7f64; border-radius: 50%; display: flex; align-items: center; justify-content: center;">
-                              <img src="https://muhammadumer.sirv.com/social-link-salah-insta.png" alt="Twitter" style="width: 18px; height: 18px;">
+                              <img src="https://muhammadumer.sirv.com/social-link-salah-insta.png" alt="Twitter" style="width: 20px; height: 20px; vertical-align: middle; margin: auto;">
                              </div>
                            </a>
                          </td>
-                         <!-- Instagram -->
-                         <td align="center" valign="top" style="padding: 0 8px;">
-                           <a href="https://www.instagram.com/globalsalah" style="display: inline-block; text-decoration: none;">
-                             <div style="width: 36px; height: 36px; background-color: #1a7f64; border-radius: 50%; display: flex; align-items: center; justify-content: center;">
-                              <img src="https://muhammadumer.sirv.com/social-link-salah-insta.png" alt="Twitter" style="width: 18px; height: 18px;">
-                             </div>
-                           </a>
-                         </td>
+             
 
                          <!-- Pintrest -->
                          <td align="center" valign="top" style="padding: 0 8px;">
                            <a href="https://www.pinterest.com/globalsalah/" style="display: inline-block; text-decoration: none;">
                              <div style="width: 36px; height: 36px; background-color: #1a7f64; border-radius: 50%; display: flex; align-items: center; justify-content: center;">
-                              <img src="https://muhammadumer.sirv.com/social-link-salah-pintrest.png" alt="Twitter" style="width: 18px; height: 18px;">
+                              <img src="https://muhammadumer.sirv.com/social-link-salah-pintrest.png" alt="Twitter" style="width: 20px; height: 20px; vertical-align: middle; margin: auto;">
                              </div>
                            </a>
                          </td>
